style.css
/* html elements */

html{
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

body{
    margin: 0px;
    padding-bottom: 30px;
    background: #f0f0f0;
}

header{
    display: block;
    padding: 1.5em;
    font-family: cursive;
    background: white;
}
main{
    margin-top: 30px;
    margin-left: 1.5em;
    margin-right: 1.5em;
}

/* table{
    border: 1px solid #d2d2d2;
    background: white;
    border-collapse: collapse;
} */

th{
    text-align: center;
    padding: 1em;
}

td{
    text-align: center;
    vertical-align: middle;
    padding: 1em;
    border: 1px solid #d2d2d2;
}

/* classes */

.right{
    float: right;
}

.left{
    float: left;
}

.title{
    font-size: 16pt;
}

.hidden{
    display: none;
}

.card{
    border-radius: 20px;
    padding-left: 1.5em;
    padding-right: 1.5em;
    padding-bottom: 1.5em;
    background: white;
    text-align: left;
    margin-right: 1.5em;
    border: 1px solid #d2d2d2;
}

.card-fixed{
    width: 300px;
    min-height: 150px;
}

.sign-in{
    background: none;
    border: none;
    cursor: pointer;
}

/* Material Icons */
.material-icons.md-light { color: rgba(255, 255, 255, 1); }
.material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3); }
.material-icons.md-dark { color: rgba(0, 0, 0, 0.54); }
.material-icons.md-dark.md-inactive { color: rgba(0, 0, 0, 0.26); }

